# ecotaxi

./: README.md  exit
ConnSett/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ConnSett/managers/: encryptionmanager.h  stylemanager.cpp  usersession.cpp  usersession.h
ConnSett/pages/: login.cpp  login.h
EcoTaxiForInvestors/: index.html  report.json  reportall.json  script.js  style.css
EcoTaxiForInvestors/lambdas/: events.py  reports.py  template.py  test.py
EcoTaxiForInvestors/package/: lambda_function.py
EcoTaxiForInvestors/pythonflask/: app.py
EcoTaxiForInvestors/pythonflask/static/: script.js
EcoTaxiForInvestors/pythonflask/templates/: index.html
EcoTaxiQt/: .gitignore  CMakeLists.txt  icon.aps  lines_of_code_counter.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  operations.h
EcoTaxiQt/classes/: car.cpp  car.h  charge.cpp  charge.h  driver.cpp  driver.h  event.cpp  event.h  investor.cpp  investor.h  kwhperiod.cpp  kwhperiod.h  location.cpp  location.h  type.cpp  type.h  user.cpp  user.h
EcoTaxiQt/database/: payments.sql
EcoTaxiQt/enums/: Events.h  Report.h  eSetting.h  setting.h
EcoTaxiQt/managers/: backupmanager.cpp  backupmanager.h  dbmanager.cpp  dbmanager.h  encryptionmanager.cpp  excelmanager.cpp  excelmanager.h  logger.cpp  logger.h  navigationmanager.cpp  navigationmanager.h  navigationmanager.ui  nm.h  operations.cpp  operations.h  pdfmanager.cpp  pdfmanager.h  reportoperations.cpp  reportoperations.h  stylemanager.cpp  stylemanager.h  usersession.cpp  usersession.h
EcoTaxiQt/pages/: addupdaterepair.cpp  addupdaterepair.h  addupdaterepair.ui  addupdatewindow.cpp  addupdatewindow.h  addupdatewindow.ui  addupdatewindowevents.cpp  addupdatewindowevents.h  addupdatewindowevents.ui  calendarpage.cpp  calendarpage.h  calendarpage.ui  customdialog.cpp  customdialog.h  customdialog.ui  editablereport.cpp  editablereport.h  editablereport.ui  eventpage.cpp  eventpage.h  eventpage.ui  generalreport.cpp  generalreport.h  generalreport.ui  login.cpp  login.h  login.ui  nointernet.cpp  nointernet.h  nointernet.ui  paymenthistory.cpp  paymenthistory.h  paymenthistory.ui  removedb.cpp  removedb.h  removedb.ui  reportpage.cpp  reportpage.h  reportpage.ui  settingspage.cpp  (+2 more)
EcoTaxiQt/scripts/: awss3uploader.cpp  awss3uploader.h  columnselectiondialog.cpp  columnselectiondialog.h  greenbackgrounddelegate.cpp  greenbackgrounddelegate.h  hash.cpp  hash.h
investor_portal/: app.py  requirements.txt
investor_portal/static/fonts/ttf/: DejaVuSans.pkl
investor_portal/templates/: base.html  car_details.html  car_report.html  dashboard.html  login.html  payments.html
